--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 flask==3.1.0
 python-dotenv==1.0.1
-TTS==0.21.1
-torch==2.1.2
 numpy==1.24.3
+torch==2.1.2
+TTS==0.21.1
+setuptools==65.5.1
+wheel==0.40.0
+trainer==0.0.31
+tensorboardX==2.6.2.2
+librosa==0.10.1
+unidecode==1.3.7
+phonemizer==3.2.1
+scipy==1.11.4
