--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ flask==3.1.0
 python-dotenv==1.0.1
 numpy==1.24.3
 torch==2.1.2
+torchaudio==2.1.2
 TTS==0.21.1
 setuptools==65.5.1
 wheel==0.40.0
@@ -14,3 +15,6 @@ scipy==1.11.4
 tqdm==4.66.1
 PyYAML==6.0.1
 pysbd==0.3.4
+fsspec==2023.12.2
+huggingface-hub==0.20.1
+coqpit==0.0.17
