--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,7 @@ requests==2.31.0
 soundfile==0.12.1
 mecab-python3==1.0.8
 protobuf==4.25.1
+matplotlib==3.7.4
+pyparsing==3.1.1
+cycler==0.12.1
+kiwisolver==1.4.5
