--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,9 @@ python-dotenv==1.0.1
 numpy==1.24.3
 torch==2.1.2
 torchaudio==2.1.2
+tqdm==4.66.1
+PyYAML==6.0.1
+pysbd==0.3.4
+pandas==2.0.3
+anyascii==0.3.2
 TTS==0.21.1
