--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -8,16 +8,27 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Install Python 3.9 and system dependencies
+# Install system dependencies and add deadsnakes PPA
 RUN apt-get update && apt-get install -y \
+    software-properties-common \
+    && add-apt-repository ppa:deadsnakes/ppa \
+    && apt-get update \
+    && apt-get install -y \
     python3.9 \
     python3.9-dev \
+    python3.9-distutils \
     python3-pip \
     build-essential \
     libsndfile1 \
     pkg-config \
     git \
     && rm -rf /var/lib/apt/lists/*
+
+# Set Python 3.9 as default
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 1
+
+# Ensure pip is installed for Python 3.9
+RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3.9
 
 # Create app directory
 RUN mkdir -p /app
