--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -38,7 +38,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install PyTorch with CUDA support and other requirements
-RUN pip3 install --no-cache-dir torch==2.1.2+cu118 torchaudio==2.1.2+cu118 -f https://download.pytorch.org/whl/cu118
+RUN pip3 install --no-cache-dir torch==2.1.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copy all application files
