working cuda and some updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   flextts:
-    container_name: flextts  # Fixed container name
+    container_name: flextts
     build: .
     ports:
       - "6969:6969"
