--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 services:
   flextts:
     container_name: flextts
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.cuda.ubuntu22.04
+    runtime: nvidia
     ports:
       - "6969:6969"
     volumes:
@@ -15,4 +18,6 @@ services:
       - DEFAULT_LANGUAGE=en # Default language for text-to-speech
       - DEFAULT_SPEAKER=donald_trump # Default speaker for text-to-speech
       - DOCKER_PORT=6969 # External port for URL generation
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     restart: unless-stopped  # Automatically restart container unless manually stopped
